--- a/TEMPLATES/css/personnel.css
+++ b/TEMPLATES/css/personnel.css
@@ -23,7 +23,7 @@ font-family:'enterpriseFont';
 src: url('../fonts/Enterprise_Bold.ttf') format('truetype');
 }
 td.tds,td.tdsa{text-align:center; padding:3px; margin-top:3px;margin-left:4px; 
-    font-size: 12px;}
+    font-size: 12px; }
 td.tdsa{text-align:left; font-size:10px; width:65px; letter-spacing:1px;}
  
 
@@ -431,7 +431,7 @@ span.sfs::after{
 
 .buttonOk {
     border-radius: 8px;
-    font-family: Roddenberry;
+    font-family: Roddenberry,federationFont;
     font-size: 20px;
     background-color: black;
     transition-duration: 0.5s;
